<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <EditText android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/edit_message" />
     
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.06"
         android:onClick="sendMessage"
         android:text="@string/button_send" />

     <Button
         android:id="@+id/notify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.06"
         android:onClick="sendNotification"
         android:text="@string/button_notify" />

     <Button
         android:id="@+id/dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="showWarningDialog"
         android:text="@string/button_dialog" />
     
</LinearLayout>
